--- a/style/all.css
+++ b/style/all.css
@@ -3,7 +3,6 @@
     padding: 0%;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
 }
 /* parte de cima do site */
 header{
@@ -39,8 +38,40 @@ header{
     border: 1px solid white;
     text-decoration: none;
     border-radius: 5px;
+    color: white;
 }
+
 /* parte do meio do site */
 
-main
+#banner{
+    display: flex;
+    width: 100%;
+    height: 350px;
+    background-image: url(../AtividadeBanco/images/banner.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+    align-items: center;
+}
+
+#bannerTexto{
+    width: 40%;
+    padding: 20px;
+    background-color: #f2871ba6;
+    color: black;
+}
+
+#pagamentoPr{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #ba2d2d;
+}
+
+#tiposPagamento{
+    width: 30%;
+    padding: 20px; 
+
+}
 
