--- a/style/all.css
+++ b/style/all.css
@@ -41,18 +41,12 @@ header{
     color: white;
 }
 
-/* parte do meio/banner do site */
-
-#faixaBranca{
-    width: 100%;
-    height: 12px;
-    background-color: #ffff;
-}
+/* parte do meio do site */
 
 #banner{
     display: flex;
     width: 100%;
-    height: 600px;
+    height: 350px;
     background-image: url(../AtividadeBanco/images/banner.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -61,40 +55,23 @@ header{
 }
 
 #bannerTexto{
-    width: 50%;
+    width: 40%;
     padding: 20px;
     background-color: #f2871ba6;
     color: black;
 }
-
-#inscricao{
-    padding: 20px 20px;
-    border: 3px solid #f38416;
-    border-radius: 4px;
-    background-color: #302727;
-    color: white;
-}
-
-#faixaBranca2{
-    width: 100%;
-    height: 50px;
-    background-color: #ffff;
-}
-
-/* Parte do pagamento */
 
 #pagamentoPr{
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #000000;
+    color: #ba2d2d;
 }
 
-#pagamento1{
-    margin: 10px;
-    width: 100px;
-    height: 100px;
-    background-color: #ba2d2d;
+#tiposPagamento{
+    width: 30%;
+    padding: 20px; 
+
 }
 
