--- a/style/all.css
+++ b/style/all.css
@@ -34,6 +34,7 @@ header{
 }
 
 #ladodireito a{
+    margin-right: 10px;
     padding: 20px 20px;
     border: 1px solid white;
     text-decoration: none;
